fix layout bug in case of wrong api response

--- a/js/apps/system/_admin/aardvark/APP/frontend/scss/_subNavbar.scss
+++ b/js/apps/system/_admin/aardvark/APP/frontend/scss/_subNavbar.scss
@@ -229,8 +229,8 @@
     padding-right: 20px;
   }
 
-  #licenseInfoArea {
-    margin-bottom: -20px;
+  .alert-license {
+    margin-bottom: 0px !important;
   }
 }
 
